[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
bson = "2.3"
actix-web = "4"
dotenv = "0.15"
config = "0.10"
listenfd = "1"